Update NTextArtImpl.java : [UPDATED] update Table rendering